--- a/index.css
+++ b/index.css
@@ -172,47 +172,47 @@ li > a:hover {
   overflow: hidden;
 }
 .place:nth-child(1) {
-  background-image: url("Images/Agumbe\,\ Karnataka\,\ India.jfif");
+  background-image: url("images/Agumbe\,\ Karnataka\,\ India.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(2) {
-  background-image: url("Images/Attur\ Church\ Road\,\ Karnataka\,\ India.jfif");
+  background-image: url("images/Attur\ Church\ Road\,\ Karnataka\,\ India.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(3) {
-  background-image: url("./Images/Mullayanagiri_Chikkamagalur.jfif");
+  background-image: url("images/Mullayanagiri_Chikkamagalur.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(4) {
-  background-image: url("Images/Chunchi\ Falls\,\ Karnataka\,\ India.jfif");
+  background-image: url("images/Chunchi\ Falls\,\ Karnataka\,\ India.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(5) {
-  background-image: url("Images/gokarna.jfif");
+  background-image: url("images/gokarna.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(6) {
-  background-image: url("Images/murudeshwar.jfif");
+  background-image: url("images/murudeshwar.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(7) {
-  background-image: url("Images/Hampi\,\ Karnataka\,\ India.jfif");
+  background-image: url("images/Hampi\,\ Karnataka\,\ India.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(8) {
-  background-image: url("Images/Tungabhadra\ Dam\,\ Hosapete\,\ Karnataka.jfif");
+  background-image: url("images/Tungabhadra\ Dam\,\ Hosapete\,\ Karnataka.jfif");
   background-size: cover;
   overflow: hidden;
 }
 .place:nth-child(9) {
-  background-image: url("Images/Namdroling\ Monastery\ Golden\ Temple\,\ Bylakuppe\,\ Karnataka\,\ Indi.jfif");
+  background-image: url("images/Namdroling\ Monastery\ Golden\ Temple\,\ Bylakuppe\,\ Karnataka\,\ Indi.jfif");
   background-size: cover;
   overflow: hidden;
 }
